# skyline

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  skyline_demo.cpp
cmake/: CPPCheck.cmake  CompilerConfiguration.cmake  CppcheckConfiguration.cmake  PrependFilePaths.cmake
modules/: CMakeLists.txt
modules/bld/: CMakeLists.txt
modules/bld/include/skyline/bld/: building.h  skyline_vector.h
modules/bld/src/: building_utils.cpp  skyline_vector.cpp
test/: CMakeLists.txt  buildings1.txt  buildings2.txt  buildings2_shuffle.txt  buildings3.txt
